crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@reports_uncovered_packages_when_changeset_is_partial.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core",
    "other"
  ],
  "changed_paths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changeset_paths": [
    ".changeset/feature.md"
  ],
  "comment": "[multiline text]",
  "covered_package_ids": [
    "core"
  ],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: other"
  ],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncovered_package_ids": [
    "other"
  ]
}
