crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@respects_package_ignored_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affected_package_ids": [],
  "changed_paths": [
    "crates/core/tests/smoke.rs"
  ],
  "changeset_paths": [],
  "comment": null,
  "covered_package_ids": [],
  "enforce": false,
  "errors": [],
  "ignored_paths": [
    "crates/core/tests/smoke.rs"
  ],
  "labels": [],
  "matched_paths": [],
  "matched_skip_labels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncovered_package_ids": []
}
