crates/monochange/tests/snapshots/affected__affected_since_flag_detects_changeset_added_after_revision@affected_since_flag_detects_changeset_added_after_revision.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    ".changeset/feature.md",
    "crates/core/src/lib.rs"
  ],
  "changeset_paths": [
    ".changeset/feature.md"
  ],
  "comment": null,
  "covered_package_ids": [
    "core"
  ],
  "enforce": false,
  "errors": [],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "crates/core/src/lib.rs"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "passed",
  "summary": "changeset verification passed: attached changesets cover 1 changed package",
  "uncovered_package_ids": []
}
