crates/monochange/tests/snapshots/affected__multiline_comment@affected_since_flag_detects_changes_from_git_revision.snap
---
source: crates/monochange/tests/affected.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `crates/core/src/lib.rs`

Affected packages:
- `core`

Errors:
- changed packages are not covered by attached changesets: core

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `monochange change --package <id> --bump patch --reason "describe the change"`
